--- a/strips.html
+++ b/strips.html
@@ -16,17 +16,17 @@
     <nav class="navigation">
         <ul>
             <li> 
-                <a href="/index.html">
+                <a href="index.html">
                     <img src="images\home.png" style = "width: 100%">
                 </a>
             </li>
             <li>
-                <a href="/strips.html">
+                <a href="strips.html">
                     <img src="images\strips.png" style = "width: 100%">
                 </a>
             </li>
             <li>
-                <a href="/about.html">
+                <a href="about.html">
                     <img src="images\about.png" style = "width: 100%">
                 </a>
             </li>
@@ -36,7 +36,7 @@
         <div>
             <aside class="comicrow">
                 <div class="comicselector">
-                    <a href="/comic_covidcrazy.html">
+                    <a href="comic_covidcrazy.html">
                         <img src="images/covidcomic_thumb.png">
                         <div class="caption">
                             <h3>COVID CRAZY</h3>
@@ -45,7 +45,7 @@
                     </a>
                 </div>    
                 <div class="comicselector">
-                    <a href="/comic_placeholder.html">
+                    <a href="comic_placeholder.html">
                         <img src="images/placeholder_thumb.png">
                         <div class="caption">
                             <h3>PLACEHOLDER 1</h3>
@@ -54,7 +54,7 @@
                     </a>
                 </div>
                 <div class="comicselector">
-                    <a href="/comic_placeholder.html">
+                    <a href="comic_placeholder.html">
                         <img src="images/placeholder_thumb.png">
                         <div class="caption">
                             <h3>PLACEHOLDER 2</h3>
@@ -65,7 +65,7 @@
 
             <aside class="comicrow">
                 <div class="comicselector">
-                    <a href="/comic_placeholder.html">
+                    <a href="comic_placeholder.html">
                         <img src="images/placeholder_thumb.png">
                         <div class="caption">
                             <h3>PLACEHOLDER 3</h3>
@@ -74,7 +74,7 @@
                     </a>
                 </div>    
                 <div class="comicselector">
-                    <a href="/comic_placeholder.html">
+                    <a href="comic_placeholder.html">
                         <img src="images/placeholder_thumb.png">
                         <div class="caption">
                             <h3>PLACEHOLDER 4</h3>
@@ -83,7 +83,7 @@
                     </a>
                 </div>
                 <div class="comicselector">
-                    <a href="/comic_placeholder.html">
+                    <a href="comic_placeholder.html">
                         <img src="images/placeholder_thumb.png">
                         <div class="caption">
                             <h3>PLACEHOLDER 5</h3>
