--- a/comic_covidcrazy.html
+++ b/comic_covidcrazy.html
@@ -16,17 +16,17 @@
     <nav class="navigation">
         <ul>
             <li> 
-                <a href="/index.html">
+                <a href="index.html">
                     <img src="images\home.png" style = "width: 100%">
                 </a>
             </li>
             <li>
-                <a href="/strips.html">
+                <a href="strips.html">
                     <img src="images\strips.png" style = "width: 100%">
                 </a>
             </li>
             <li>
-                <a href="/about.html">
+                <a href="about.html">
                     <img src="images\about.png" style = "width: 100%">
                 </a>
             </li>
